--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,67 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+
+ion-menu-button {
+    color: var(--ion-color-primary);
+  }
+  
+  #container {
+    text-align: center;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+  }
+  
+  #container strong {
+    font-size: 20px;
+    line-height: 26px;
+  }
+  
+  #container p {
+    font-size: 16px;
+    line-height: 22px;
+    color: #8c8c8c;
+    margin: 0;
+  }
+  
+  #container a {
+    text-decoration: none;
+  }
+  
+  .half {
+    float: left;
+    width: 50%;
+    border-style: none none none double;
+  }
+  
+  .full {
+    float: left;
+    width: 100%;
+    border-style: dotted dashed solid double;
+  }
+  
+  iframe {
+    border: 1px solid black;
+    width: 100%;
+  }
+  
+  .output {
+    background: #eee;
+  }
+  
+  .headr {
+    float: left;
+    width: 50%;
+  }
+  
+  #mapid { height: 180px; }
+  
+  .text {
+    text-align: right;
+   size: 10%;
+  }
+  
