--- a/src/app/folder/folder.page.html
+++ b/src/app/folder/folder.page.html
@@ -38,18 +38,47 @@
           <ion-select-option value="PortHoles">Robots</ion-select-option>
         </ion-select>
       </ion-item>
-      <ion-item class="half">
-        <ion-label>Location:</ion-label>
+      <ion-item class="full blockHeading">
+        <ion-label><strong>Location : </strong></ion-label>
       </ion-item>
       <ion-item class="half">
+        <ion-label>Select province</ion-label>
+        <ion-select [(ngModel)]="portHole.location.province" name="provinceName" id="provinceNameId"
+          placeholder="Select province" (ionChange)="provinceSelected($event)">
+          <ion-select-option *ngFor="let province of provinces" value="{{province.id}}">{{province.name}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="provinceCities.length !== 0" class="half">
+        <ion-label>Select city</ion-label>
+        <ion-select [(ngModel)]="portHole.location.city" (ionChange)="provinceCitySelected($event)" name="cityName"
+          id="cityNameId" placeholder="Select city">
+          <ion-select-option *ngFor="let provinceCity of provinceCities" value="{{provinceCity.id}}">
+            {{provinceCity.name}}
+          </ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="cityManucipalities.length !== 0" class="half">
+        <ion-label>Select manucipality</ion-label>
+        <ion-select [(ngModel)]="portHole.location.manucipality" name="manucipalityName" id="manucipalityNameId"
+          placeholder="Select manucipality">
+          <ion-select-option *ngFor="let manucipality of cityManucipalities" value="{{manucipality.id}}">
+            {{manucipality.name}}</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item *ngIf="cityManucipalities.length !== 0" class="half">
+        <ion-label>Select road type</ion-label>
+        <ion-select [(ngModel)]="portHole.roadType" (ionChanged)="cityManucipalitySelected($event)" name="roadTypeName"
+          id="roadTypeNameId" placeholder="Select road type">
+          <ion-select-option value="National">National road</ion-select-option>
+          <ion-select-option value="Manucipal">Manucipal road</ion-select-option>
+          <ion-select-option value="Provencial">Provencial road</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <ion-item class="full blockHeading">
         <ion-label>Photo :</ion-label>
       </ion-item>
-      <ion-item class="half">
-        <iframe id="inlineFrameExample" title="Inline Frame Example" width="300" height="200"
-          src="https://www.openstreetmap.org/export/embed.html?bbox=-0.004017949104309083%2C51.47612752641776%2C0.00030577182769775396%2C51.478569861898606&layer=mapnik">
-        </iframe>
-      </ion-item>
-      <ion-item class="half">
+      <ion-item class="half blockHeading">
         <input type='file' (change)="onFileChanged($event)" />
         <img src={{url}} style="height: 250px;">
       </ion-item>
@@ -70,6 +99,10 @@
               <strong>Name :</strong> {{portHole.fullnames}} <br />
               <strong>Cell :</strong> {{portHole.cellnumber}} <br />
               <strong>Complaint :</strong> {{portHole.issueType}} <br />
+              <strong>Road type :</strong> {{portHole.roadType}} <br />
+              <strong>Province :</strong> {{getProvinceNamebyId(portHole.location.province)}} <br />
+              <strong>City :</strong> {{getCityNamebyId(portHole.location.city)}} <br />
+              <strong>Manucipality :</strong> {{getManucipalityNamebyId(portHole.location.manucipality)}} <br />
               <br />
             </div>
           </ion-col>
@@ -79,19 +112,6 @@
             </div>
           </ion-col>
         </ion-row>
-        <!-- <ion-row>
-          <ion-col>
-            <div>
-              {{portHole.issueType}}
-              {{portHole.cellnumber}}
-            </div>
-          </ion-col>
-          <ion-col>
-            <div>
-              {{portHole.cellnumber}}
-            </div>
-          </ion-col>
-        </ion-row> -->
       </ion-grid>
     </ion-card>
   </ion-card>
