updated issiue with location

--- a/src/app/potholes/potholes.page.html
+++ b/src/app/potholes/potholes.page.html
@@ -101,7 +101,13 @@
         </ion-col>
         <ion-col>
           <div>
-            Location
+            {{pothole.location.province}}
+          </div>
+          <div>
+            {{pothole.location.city}}
+          </div>
+          <div>
+            {{pothole.location.manucipality}}
           </div>
         </ion-col>
         <ion-col>
